# Castle-Celestial-View

./: .dockerignore  .gitignore  .pylintrc  BUILD.md  CHANGELOG.md  Dockerfile.playwright  EclipseIconData.py  Harness.py  LICENSE  NOTICE  README.md  RELEASE_PROCESS.md  RELEASE_QA.md  Update-LinuxSnapshots.ps1  VERSIONING.md  VenusRiseAndSet.py  check_all_phases.py  check_phase.py  check_venus_phases.py  generate_api_reversed_locale.py  generate_reversed_locale.py  pyproject.toml  requirements-dev.txt  requirements.txt  research_june_19_2026_visibility.py  test_min_separation.py  test_timezone_fix.py  test_venus_all_scenarios.py  test_venus_conjunction.py  test_venus_glare.py  test_venus_harness.py  test_venus_horizons.py  test_venus_phase.py  test_venus_transition_search.py  update-linux-snapshots.sh
.github/workflows/: ci.yml  release.yml
api/: i18n.py  main.py  models.py  routes.py  utils.py
api/locales/: en-UK.json  en-US.json  en.json  xx-reverse.json
api/services/: batch_earth_observations.py  dates.py  mars.py  mercury.py  moon.py  moon_phase.py  sun.py  venus.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  test-results.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/playwright-report-prod/: index.html
frontend/src/: App.vue  i18n.test.ts  i18n.ts  main.ts  router.ts  test-setup.ts
frontend/src/components/: AstronomyScene.test.ts  AstronomyScene.vue  (+10 more)
frontend/tests/: accessibility-manual.md  release-manual.md
icon-generator/: index.html
scripts/: verify-production-release.sh
tests/: test_DayOfTheWeek.py  test_api_batch_earth_observations.py  test_api_dates.py  test_api_i18n.py  test_api_mars.py  test_api_mars_routes.py  test_api_mercury.py  test_api_moon.py  test_api_moon_phase.py  test_api_radec_coordinates.py  test_api_routes.py  test_api_sun.py  test_api_venus.py  test_api_venus_routes.py  test_batch_radec_integration.py
(+43 files in other folders)
